--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
         <h2>HTML</h2> 
         <p>        
             <a href="https://www.w3.org/TR/2011/WD-html5-20110405/text-level-semantics.html#the-a-element">HyperText Markup Language(HTML)is wonderful</a><br>I'd like to share my warm knowledge. 
-            <strong>I have been <u>working</u> now in Samsung Electornics. </strong>
+            <strong>I have been <u>working</u> now in Samsung Electornicdfffs. </strong>
             <img src="image.jpg" width="400">
         </p>           
     </body>
